--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -10,7 +10,7 @@
     margin-bottom: $xxl-size;
     
     .button {
-      background: orange !important;
+      background: $orange !important;
       font-size: $ml-size;
     }
   }
