remake by React and start to use firebase

--- a/src/styles/components/_ui.scss
+++ b/src/styles/components/_ui.scss
@@ -5,6 +5,7 @@
   cursor: pointer;
 
   &-anchor {
+    color: $white;
     display: block;
     text-align: center;
     padding: $s-size $xl-size;
