--- a/src/styles/components/_ui.scss
+++ b/src/styles/components/_ui.scss
@@ -10,6 +10,9 @@
     text-align: center;
     padding: $s-size $xl-size;
   }
+  .unactive {
+    background: $gray;
+  }
   &--filter1 {
     background: $orange !important;
     .button-anchor {
@@ -17,14 +20,23 @@
     }
   }
   &--filter2 {
-    background: orange !important;
+    background: orange;
     width: 14%;
     margin: 0 5% $l-length;
     .button-anchor {
       padding: $s-length 0;
     }
   }
+  &--black {
+    background: $black;
+    border-radius: 10px;
+    padding: $sm-size $ml-size;
+    font-size: $sm-size;
+  }
 }
+.clicked {
+  background: lighten(orange, 30%)
+} 
 .findcollaborator {
   width: 20%;
   margin: 0 auto;
