--- a/src/styles/components/_ui.scss
+++ b/src/styles/components/_ui.scss
@@ -45,3 +45,13 @@
     padding: $l-length 0;
   }
 }
+
+.awesomeIcon {
+  font-size: 45px;
+  padding: 10px;
+}
+.icon-user-circle {
+  display: block;
+  color: $lightBlue;
+  margin-right: 20px;
+}
