add login logout function

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -32,3 +32,13 @@
     align-items: center;
   }
 }
+
+.logout {
+  padding: 10px;
+  cursor: pointer;
+
+  span {
+    font-size: 18px;
+    color: $blue;
+  }
+}
