renamed some functions

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,7 @@
 @import './base/size';
 @import './base/reset';
 @import './components/ui';
+@import './components/load';
 @import './components/header';
 @import './components/main';
 @import './components/filter';
