--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,10 @@
 @import './base/color';
 @import './base/size';
 @import './base/reset';
-@import './components/ui';
+@import './base/ui';
 @import './components/load';
 @import './components/header';
 @import './components/main';
 @import './components/filter';
 @import './components/profile';
+@import './components/sendMail';
