--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,3 +8,4 @@
 @import './components/filter';
 @import './components/profile';
 @import './components/sendMail';
+@import './components/MusicianPage';
