--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,3 +9,4 @@
 @import './components/profile';
 @import './components/sendMail';
 @import './components/MusicianPage';
+@import './components/TrimModal';
