add delete account modal

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,3 +10,4 @@
 @import './components/sendMail';
 @import './components/MusicianPage';
 @import './components/TrimModal';
+@import './components/DeleteAccountModal';
