--- a/src/styles/components/_profile.scss
+++ b/src/styles/components/_profile.scss
@@ -79,6 +79,12 @@
 		text-align: center;
 	}
 }
+
+.delete-account-btn {
+	background: red;
+	color: white;
+}
+
 .error-message {
 	color: red;
 	margin: 10px 0;
