add components and create route

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,7 @@
 @import './base/ui';
 @import './components/load';
 @import './components/header';
+@import './components/Footer';
 @import './components/main';
 @import './components/filter';
 @import './components/profile';
