--- a/src/styles/components/_ChatBox.scss
+++ b/src/styles/components/_ChatBox.scss
@@ -4,3 +4,112 @@
 	align-items: center;
 	justify-content: center;
 }
+
+// Message
+.messageRow {
+	display: flex;
+}
+.messageRowRight {
+	display: flex;
+	justifyContent: flex-end;
+}
+.messageBlue {
+	position: relative;
+	margin-left: 20px;
+	padding: 10px;
+	background-color: #A8DDFD;
+	margin-bottom: 10px;
+	width: 60%;
+	min-width: 30%;
+	//minHeight: 50px;
+	text-align: left;
+	font: 400 .9em 'Open Sans', 'sans-serif';
+	border: 1px solid #97C6E3;
+	border-radius: 10px;
+	&:after {
+			content: '';
+			position: absolute;
+			width: 0;
+			height: 0;
+			border-top: 15px solid #A8DDFD;
+			border-left: 15px solid transparent;
+			border-right: 15px solid transparent;
+			top: 0;
+			left: -15px;
+	}
+	&:before {
+			content: '';
+			position: absolute;
+			width: 0;
+			height: 0;
+			border-top: 17px solid #97C6E3;
+			border-left: 16px solid transparent;
+			border-right: 16px solid transparent;
+			top: -1px;
+			left: -17px;
+	}
+}
+.messageOrange {
+	position: relative;
+	margin-right: 20px;
+	margin-bottom: 10px;
+	padding: 10px;
+	background-color: #f8e896;
+	width: 60%;
+	//height: 50px;
+	text-align: left;
+	font: 400 .9em 'Open Sans', sans-serif;
+	border: 1px solid #dfd087;
+	border-radius: 10px;
+	&:after {
+			content: '';
+			position: absolute;
+			width: 0;
+			height: 0;
+			border-top: 15px solid #f8e896;
+			border-left: 15px solid transparent;
+			border-right: 15px solid transparent;
+			top: 0;
+			right: -15px;
+	}
+	&:before {
+			content: '';
+			position: absolute;
+			width: 0;
+			height: 0;
+			border-top: 17px solid #dfd087;
+			border-left: 16px solid transparent;
+			border-right: 16px solid transparent;
+			top: -1px;
+			right: -17px;
+	}
+}
+
+.messageContent {
+	padding: 0;
+	margin: 0;
+}
+.messageTimeStampRight {
+	position: absolute;
+	font-size: .85em;
+	font-weight: 300;
+	margin-top: 10px;
+	bottom: -3px;
+	right: 5px;
+}
+
+.orange {
+	color: rgb(255, 81, 0);
+	background-color: orange;
+	width: 100px;
+	height: 100px;
+}
+.avatarNothing {
+	color: transparent;
+	background-color: transparent;
+	width: 100px;
+	height: 100px;
+}
+.displayName {
+	margin-left: 20px;
+}
