--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,3 +12,5 @@
 @import './components/MusicianPage';
 @import './components/TrimModal';
 @import './components/DeleteAccountModal';
+@import './components/PrivacyPolicy';
+@import './components/TermsAndConditions';
