--- a/src/styles/components/_Footer.scss
+++ b/src/styles/components/_Footer.scss
@@ -1,8 +1,20 @@
 .footer {
-  text-align: center;
-  height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  &__link{
+  &__terms-and-conditions {
+    margin: 2rem;
+  }
+
+  &__contactus {
+    margin: 2rem;
+    border: solid 1px blue;
+    border-radius: 3px;
+    padding: 0.5rem;
+  }
+
+  &__link {
     margin: 0.5rem;
   }
 }
