--- a/src/styles/components/_ContactForm.scss
+++ b/src/styles/components/_ContactForm.scss
@@ -7,6 +7,9 @@
   .contactform-title {
     margin-bottom: 3rem;
   }
+  .error-message {
+    color: red;
+  }
   .form-wrap {
     display: flex;
     flex-direction: row;
