add popup on contact form etc

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,3 +16,4 @@
 @import "./components/TermsAndConditions";
 @import "./components/ContactForm";
 @import "./components/ChatBox";
+@import "./components/MessageSentModal";
