--- a/src/styles/components/_filter.scss
+++ b/src/styles/components/_filter.scss
@@ -30,9 +30,15 @@
   justify-content: center;
 }
 
+.filter-form {
+  display: flex;
+  justify-content: space-around;
+}
+
 .filter-input {
-  padding: 15px;
+  padding: 10px;
   width: 100%;
+  margin-right: 10px;
 }
 
 .filter-bottommassage {
