--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,3 +11,4 @@
 @import './components/MusicianPage';
 @import './components/TrimModal';
 @import "./components/ChatBox";
+@import './components/Messages';
