--- a/src/styles/components/_ChatBox.scss
+++ b/src/styles/components/_ChatBox.scss
@@ -97,7 +97,7 @@
 }
 .messages-body {
 	width: calc( 100% - 20px ); 
-	margin: 10px;
+	margin: 0 10px;
 	overflow-y: scroll;
 	-ms-overflow-style: none;    /* IE, Edge */
   scrollbar-width: none; /* Firefox */
